--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bottle==0.12.19
 bottle-websocket==0.2.9
 certifi==2020.12.5
 chardet==3.0.4
+discord-py-slash-command==1.1.2
 discord.py==1.6.0
 Eel==0.12.4
 fire==0.4.0
@@ -33,4 +34,3 @@ whichcraft==0.6.1
 yarl==1.6.3
 zope.event==4.5.0
 zope.interface==5.2.0
-discord-py-slash-command
